--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.mobile.notifications": "1.0.3",
     "com.unity.remote-config": "1.0.9",
     "com.unity.render-pipelines.universal": "7.3.1",
     "com.unity.test-framework": "1.1.19",
